# wave-generator-engine

./: README.md  pyproject.toml
contracts/: diagnostic_wav_export_contract_v1.json
docs/: AUTHORITY_TIERS.md  BASELINE_MODE_PLANNER.md  BASELINE_SOURCE_COMPARISON.md  BASIC_AND_ADVANCED_VIEWS.md  BLOCKED_BEHAVIORS.md  CALIBRATION_MODEL.md  CALIBRATION_PREFLIGHT.md  CONTENT_HASHING.md  DELIVERY_PRESETS.md  DETERMINISTIC_PCM16_WRITER_CORE.md  DETERMINISTIC_RANDOMNESS.md  DIAGNOSTICS.md  DIAGNOSTIC_WAV_EXPORT_CONTRACT.md  ENGINE_ARCHITECTURE.md  EVENT_PLAN.md  EXACT_IDENTITY_ACCESS.md  FIRST_DIAGNOSTIC_WAV_PACK.md  FROZEN_MOTIF_BANK.md  INTERCHANGE_IMPORT.md  LEVER_MODEL.md  MESO_CLUSTER_RHYTHM_MODEL.md  MOTIF_INTEGRITY.md  NEXT_STEPS.md  OUTPUT_ARCHITECTURE.md  PLANNING_PIPELINE.md  PLANNING_PROFILE_RESOLUTION.md  PROFILE_LIBRARY.md  PROFILE_LIFECYCLE.md  RUN_REQUESTS.md  RUN_RETENTION.md  SESSION1_SOURCE_PLANNING_PROFILE.md  SOURCE_REFERENCE_QUALIFICATION.md  TIMING_AND_DEPENDENCIES.md  WGE1_SCOPE.md  WGE2_SCOPE.md  WGE3Q_SCOPE.md  WGE3_SCOPE.md
policies/: meso_cluster_rhythm_policy_v1.json
profiles/: registry.json
reports/: WGE0_READINESS_REPORT.md  WGE1_READINESS_REPORT.md  WGE2_READINESS_REPORT.md  WGE3S_ALIGNMENT_ITERATIONS.md  WGE3S_METRIC_SEMANTICS_AUDIT.md  WGE3S_SOURCE_ALIGNMENT_REPORT.md  WGE3_READINESS_REPORT.md  WGE3_SOURCE_QUALIFICATION_REPORT.md  WGE4A_RENDER_AUDIT_REPORT.md  WGE4B1_EXPORT_CONTRACT_REPORT.md  WGE4B2A_WRITER_CORE_REPORT.md  WGE4B2B_DIAGNOSTIC_EXPORT_REPORT.md  WGE4C_FIRST_AUDIO_REVIEW.md  WGE5A1_SOURCE_CLUSTER_STATISTICS.md  WGE5A_MESO_CLUSTER_RHYTHM_AUDIT.md  WGE5B1A_MESO_SCHEDULER_CORE_REPORT.md  WGE5B1B_PLANNER_INTEGRATION_REPORT.md  WGE5B2_CLUSTERED_SESSION1_QUALIFICATION.md  calibration_preflight.json  frozen_motif_corpus_summary.json  wge0_readiness_report.json  wge1_readiness_report.json  (+15 more)
(+305 files in other folders)
