[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-generator-engine"
version = "0.4.1"
description = "WGE-3 deterministic planning with source-reference qualification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.18,<5", "numpy>=2.0,<3", "matplotlib>=3.9,<4"]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[project.scripts]
wge = "wave_generator_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
